--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <header>
     <h1>My header</h1>
   </header>
+  <main>
+    Главная страница
+  </main>
   <script src="index.js"></script>
 </body>
 </html>
